--- a/style/sections/sectionForm.scss
+++ b/style/sections/sectionForm.scss
@@ -64,6 +64,10 @@
   border: 1px solid #d1cfcb;
 }
 
+.delivery__input_required{
+  background-color: #fa9595;
+}
+
 .delivery__text {
   margin-bottom: 5px;
 }
